chore: fix rest of misaligned pages and implement view & edit lecture pages

--- a/static/stylesheets/admin/view-lecture-info.css
+++ b/static/stylesheets/admin/view-lecture-info.css
@@ -1,4 +1,4 @@
-#lecturer-info {
+#lecture-info {
   margin-top: 2%;
   width: 100%;
   max-width: 75%;
@@ -11,7 +11,6 @@
 
 #form-title {
   margin-top: 1em;
-  text-align: center;
 }
 
 .wrapper {
